# goserver/api/filelist.go
@@ -71,6 +71,7 @@ func (f *FileListAPI) ReadDir(pathname string) (fileinfoList []response.FileInfo
 }
 
 // GetFileList
+//
 //	@Summary		传入文件夹路径获取文件列表，不传参时返回根列表
 //	@Description	传入路径获取文件列表，不传参时返回根列表
 //	@Tags			filelist
@@ -78,7 +79,7 @@ func (f *FileListAPI) ReadDir(pathname string) (fileinfoList []response.FileInfo
 //	@Produce		application/json
 //	@Param			data	body		request.FilePath							true	"文件列表路径"
 //	@Success		200		{object}	response.Response{data=[]response.FileInfo}	"文件列表信息"
-//	@Router			/filelist [post]
+//	@Router			/fileList/filelist [post]
 func (f *FileListAPI) GetFileList(c *gin.Context) {
 	l := global.Logger
 	var req request.FilePath
@@ -130,6 +131,7 @@ func (f *FileListAPI) GetFileList(c *gin.Context) {
 }
 
 // MakeDir
+//
 //	@Summary		新建文件夹
 //	@Description	传入文件夹的路径，新建文件夹
 //	@Tags			filelist
@@ -137,7 +139,7 @@ func (f *FileListAPI) GetFileList(c *gin.Context) {
 //	@Produce		application/json
 //	@Param			data	body		request.MkdirPath			true	"目录信息"
 //	@Success		200		{object}	response.Response{data=any}	"操作成功"
-//	@Router			/mkdir [post]
+//	@Router			/fileList/mkdir [post]
 func (f *FileListAPI) MakeDir(c *gin.Context) {
 	// l := global.Logger
 	var req request.MkdirPath
@@ -160,6 +162,7 @@ func (f *FileListAPI) MakeDir(c *gin.Context) {
 }
 
 // removeItem
+//
 //	@Summary		删除目录或文件
 //	@Description	传入路径，删除目录或文件
 //	@Tags			filelist
@@ -167,7 +170,7 @@ func (f *FileListAPI) MakeDir(c *gin.Context) {
 //	@Produce		application/json
 //	@Param			data	body		request.OperateFilePath		true	"路径"
 //	@Success		200		{object}	response.Response{data=any}	"操作成功"
-//	@Router			/removeItem [post]
+//	@Router			/fileList/removeItem [post]
 func (f *FileListAPI) RemoveItem(c *gin.Context) {
 	// l := global.Logger
 	var req request.OperateFilePath
@@ -185,6 +188,7 @@ func (f *FileListAPI) RemoveItem(c *gin.Context) {
 }
 
 // createTxt
+//
 //	@Summary		创建txt文本文件
 //	@Description	传入文件名和内容，创建txt文本文件
 //	@Tags			filelist
@@ -192,7 +196,7 @@ func (f *FileListAPI) RemoveItem(c *gin.Context) {
 //	@Produce		application/json
 //	@Param			data	body		request.TxtFile				true	"创建txt需要的参数"
 //	@Success		200		{object}	response.Response{data=any}	"操作成功"
-//	@Router			/createTxt [post]
+//	@Router			/fileList/createTxt [post]
 func (f *FileListAPI) CreateTxt(c *gin.Context) {
 	// l := global.Logger
 	var req request.TxtFile
@@ -218,6 +222,7 @@ func (f *FileListAPI) CreateTxt(c *gin.Context) {
 }
 
 // uploadMulti
+//
 //	@Summary		多文件上传
 //	@Description	传入文件名和内容，创建txt文本文件
 //	@Tags			filelist
@@ -225,7 +230,7 @@ func (f *FileListAPI) CreateTxt(c *gin.Context) {
 //	@Produce		application/json
 //	@Param			data	body		request.TxtFile				true	"创建txt需要的参数"
 //	@Success		200		{object}	response.Response{data=any}	"操作成功"
-//	@Router			/uploadMulti [post]
+//	@Router			/fileList/uploadMulti [post]
 func (f *FileListAPI) UploadMulti(c *gin.Context) {
 	l := global.Logger
 	fmt.Println("enter upload multi")
@@ -278,6 +283,7 @@ func (f *FileListAPI) UploadMulti(c *gin.Context) {
 }
 
 // renameItem
+//
 //	@Summary		重命名文件或文件夹
 //	@Description	传入文件名和路径，重命名文件或文件夹
 //	@Tags			filelist
@@ -285,7 +291,7 @@ func (f *FileListAPI) UploadMulti(c *gin.Context) {
 //	@Produce		application/json
 //	@Param			data	body		request.Rename				true	"重命名需要的参数"
 //	@Success		200		{object}	response.Response{data=any}	"操作成功"
-//	@Router			/renameItem [post]
+//	@Router			/fileList/renameItem [post]
 func (f *FileListAPI) RenameItem(c *gin.Context) {
 	var req request.Rename
 	err := c.ShouldBindJSON(&req)
@@ -342,6 +348,7 @@ func (f *FileListAPI) checkDirBeforeCompress(dir string, option DownloadDirCheck
 }
 
 // downloadItem
+//
 //	@Summary		下载项目
 //	@Description	传入fileitem下载指定项目，文件夹和文件的情况区别处理
 //	@Tags			filelist
@@ -349,7 +356,7 @@ func (f *FileListAPI) checkDirBeforeCompress(dir string, option DownloadDirCheck
 //	@Produce		application/json
 //	@Param			data	body		response.FileInfo			true	"下载文件对应的信息"
 //	@Success		200		{object}	response.Response{data=any}	"操作成功"
-//	@Router			/downloadItem [post]
+//	@Router			/fileList/downloadItem [post]
 func (f *FileListAPI) DownloadItem(c *gin.Context) {
 	var req request.FileInfo
 	// 这一步已经校验了路径存在
@@ -389,7 +396,7 @@ func (f *FileListAPI) DownloadItem(c *gin.Context) {
 		//
 		contentStr := "attachment; filename*=UTF-8''" + url.QueryEscape(req.Name)
 
-		c.Header("Content-Disposition", contentStr)
+		c.Header("Content-tion", contentStr)
 		// l.Debug("content-do", zap.String("cd", contentStr))
 		// c.Header("Content-Transfer-Encoding", "binary")
 		c.File(req.Path)
